--- a/front-end/src/assets/css/index.css
+++ b/front-end/src/assets/css/index.css
@@ -1,11 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 :root {
+  --primary-color: #2C466D;
+  --second-color: #FF3C20;
+  --third-color: #232F3E;
   --main-bg: #ffffff;
   --second-bg: #fafafb;
   --txt-color: #455560;
   --txt-white: #fff;
   --main-color: #349eff;
-  --second-color: #62b4ff;
   --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
   --main-bg-light: #ffffff;
@@ -33,7 +35,7 @@
   --main-color-orange: #d68102;
   --second-color-orange: #fca11a;
 
-  --sidebar-width: 300px;
+  --sidebar-width: 280px;
   --border-radius: 15px;
   --topnav-height: 110px;
   --transition-cubic: cubic-bezier(0.175, 0.885, 0.32, 1.275);
